--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <p>“Mi Nombres es Cristian Camilo Briñez Gutierrez, soy desarrollador full stack Tecnólogo profesional 
                             con 8 meses de experiencia”</p>
 
-                        <button class="btn boton" type="button">Contactarme</button>
+                        <a href="#contacto"><button class="btn boton" type="button">Contactarme</button></a>
 
                         <a href=""><img src="img/Redes Sociales/linked.jpg" data-aos="flip-left" alt=""></a>
                         <a href=""><img src="img/Redes Sociales/whatsapp.jpg" data-aos="flip-left" alt=""></a>    
@@ -122,12 +122,13 @@
           </div>
         </section>
 
+<!--    Mi servicios          -->
         <section id="miservicios" class="py-5">
           <div class="container">
             <h2><span>Mí</span> SERVICIOS</h2>
               <div class="row">
                   <div class="col fondo">
-                    <img src="img/Servicios/Rectangle 1.jpg" data-aos="zoom-in" alt="">
+                    <a href="https://learn.microsoft.com/en-us/sql/sql-server/?view=sql-server-ver16"><img src="img/Servicios/Rectangle 1.jpg" data-aos="zoom-in" alt=""></a>
                     <p>Developer Back-end</p>
                   </div>  
                   
